[package]
name = "connection-reset"
version = "0.0.0"
publish = false
edition = "2018"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead.
[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.0"
pretty_env_logger = "0.4.0"
log = "0.4.11"


